plugins {
	id 'fabric-loom' version '1.5-SNAPSHOT'
	id 'maven-publish'
//	id 'com.modrinth.minotaur' version '2.+'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()
	maven { url "https://maven.isxander.dev/releases" }
	maven { url "https://maven.terraformersmc.com/releases" }
	maven { url "https://server.bbkr.space/artifactory/libs-release" }
	maven { url "https://jitpack.io" }

	maven { url = 'https://maven.ladysnake.org/releases'
			content {
			includeGroup 'io.github.ladysnake'
			includeGroup 'org.ladysnake'
			includeGroupByRegex 'dev\\.onyxstudios.*' } }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"

	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation "com.ptsmods:devlogin:3.4.1"

	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl_version}"
	modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
	modImplementation include ("com.github.0x3C50:Renderer:${project.renderer_version}")

	//modImplementation include("io.github.cottonmc:LibGui:$project.lib_gui_version")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}


	repositories {

	}
}